fix: bumps log up to 80px so bottom bar is visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -80,7 +80,7 @@ nav {
 
 #log {
   position: fixed;
-  bottom: 8px;
+  bottom: 80px;
   right: 8px;
   min-width: 15vw;
   background: rgba(0,0,0,0.7);
